# fool-s-mate

./: .aider.chat.history.md  .aider.input.history  .gitignore  README.md  agent_logs.db  agent_logs_ini.sql  api_example.py  api_keys.db  api_keys2.db  app.py  backend_kali_infer.py  cli_tool _docker.py  cli_tool.py  cli_tool_docker.py  get_cli_info_tools.py  ini.sql  main.py  print_logs.py  pyproject.toml  quaries_user.py  readme.md  route_kali.py  route_user.py
.aider.tags.cache.v3/: cache.db  cache.db-shm  cache.db-wal
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  api_client.tsx  index.css  page_home.tsx
frontend/src/components/: qna_comp.tsx
frontend/src/components/ui/: table.tsx
prompts/: approved_commands.yaml  check_tools.sh  example_commands.yaml  prompts.yaml  prompts_pentest.yaml
smolagents/: gradio_ui.py  monitoring.py  utils.py
tools/: aider_tool.py  cli_tool.py  get_cli_info_tools.py
