[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fool-s-mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "smolagents @ file://${PROJECT_ROOT}/smolagents",
    "python-dotenv"
]

[project.optional-dependencies]
dev = [
    "smolagents[dev] @ file://${PROJECT_ROOT}/smolagents"
]
