[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fool-s-mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "PyYAML",
    "markdownify",
    "requests",
    "litellm"
]

[project.optional-dependencies]
dev = []

[tool.pdm.dev-dependencies]
smolagents = {path = "./smolagents", extras = ["dev"]}
