[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fool-s-mate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "PyYAML",
    "markdownify",
    "requests",
    "litellm",
    "huggingface-hub>=0.28.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "pandas>=2.2.3",
    "jinja2>=3.1.4",
    "pillow>=11.0.0",
    "markdownify>=0.14.1",
    "duckduckgo-search>=6.3.7",
    "python-dotenv",
    "PyYAML",
    "requests",
    "fastapi",
    "pydantic",
    "uvicorn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smolagents*", "logs*", "prompts*"]

[project.optional-dependencies]
dev = []

[tool.pdm.dev-dependencies]

[tool.setuptools.packages.find]
where = ["."]
include = ["smolagents*", "logs*", "prompts*"]

